--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -512,6 +512,7 @@ ViewerWnd.ClearAnnotations = Clear annotations
 ViewerWnd.Exit = Finish
 ViewerWnd.NoPixelSizeMsg = Measurement is not available. The image is not calibrated.
 ViewerWnd.Config = Configuration
+ViewerWnd.error.zoom.operation = Zoom operation requested can not be completed.
 
 QueryForm.Title = Study search
 QueryForm.PatientName = Patient name:
