--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -518,6 +518,7 @@ ViewerWnd.ClearAnnotations = Limpiar anotaciones
 ViewerWnd.Exit = Terminar
 ViewerWnd.NoPixelSizeMsg = No es posible realizar la medición. La imagen no está calibrada para mediciones.
 ViewerWnd.Config = Configuración
+ViewerWnd.error.zoom.operation = No es posible continuar realizando zoom.
 
 QueryForm.Title = Lista de estudios
 QueryForm.PatientName = Nombre
