Agregando nuevas funcionalidades

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -156,6 +156,8 @@ words.status = Status
 words.descripcion = Description
 words.excel.export = Export to excel
 words.period = Period
+words.fullscreen = Full screen
+words.restore.fullscreen = Restore window
 
 words.download.report = Download report
 words.start = Start
