--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -156,6 +156,8 @@ words.status = Estado
 words.descripcion 	= Descripción
 words.excel.export = Exportar a excel
 words.period = Período
+words.fullscreen = Ventana completa
+words.restore.fullscreen = Restaurar ventana
 
 words.download.report = Descargar informe
 words.start = Inicio
