--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -541,3 +541,10 @@ QueryForm.PreviousPage = Previous page
 QueryForm.NextPage = Next page
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No studies were found
+
+Generic.Ok = Ok
+Generic.Cancel = Cancel
+Generic.Yes  = Yes
+Generic.No  = No
+Generic.Year = Y
+Generic.Month = M
