--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -547,4 +547,11 @@ QueryForm.PreviousPage = Anteriores
 QueryForm.NextPage = Siguientes
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No se encontraron estudios
+
+Generic.Ok  = Aceptar
+Generic.Cancel  = Cancelar
+Generic.Yes = Sí
+Generic.No = No
+Generic.Year = A
+Generic.Month = M
  
