Agregando el restaurar todo

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -501,6 +501,7 @@ ViewerWnd.Contrast = Bright and contrast
 ViewerWnd.PreviousFrame = Previous frame
 ViewerWnd.NextFrame = Next frame
 ViewerWnd.Undo = Undo
+ViewerWnd.Restore = Restore
 ViewerWnd.LinkBreak = Linked operations
 ViewerWnd.LinkUnbreak = Unlinked operations
 ViewerWnd.Layout1 = 1 Image
