--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -507,6 +507,7 @@ ViewerWnd.Contrast = Brillo y contraste
 ViewerWnd.PreviousFrame = Cuadro anterior
 ViewerWnd.NextFrame = Cuadro siguiente
 ViewerWnd.Undo = Deshacer
+ViewerWnd.Restore = Restaurar
 ViewerWnd.LinkBreak = Operaciones enlazadas
 ViewerWnd.LinkUnbreak = Operaciones desenlazadas
 ViewerWnd.Layout1 = 1 Imagen
