--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -158,6 +158,8 @@ words.excel.export = Export to excel
 words.period = Period
 words.fullscreen = Full screen
 words.restore.fullscreen = Restore window
+words.images = Images
+words.image.view = Image view
 
 words.download.report = Download report
 words.start = Start
