--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -158,6 +158,8 @@ words.excel.export = Exportar a excel
 words.period = Período
 words.fullscreen = Ventana completa
 words.restore.fullscreen = Restaurar ventana
+words.images = Imágenes
+words.image.view = Vista de imagen
 
 words.download.report = Descargar informe
 words.start = Inicio
