--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -518,6 +518,7 @@ ViewerWnd.Exit = Finish
 ViewerWnd.NoPixelSizeMsg = Measurement is not available. The image is not calibrated.
 ViewerWnd.Config = Configuration
 ViewerWnd.error.zoom.operation = Zoom operation requested can not be completed.
+ViewerWnd.loading.image = Loading image...
 
 QueryForm.Title = Study search
 QueryForm.PatientName = Patient name:
