--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -524,6 +524,7 @@ ViewerWnd.Exit = Terminar
 ViewerWnd.NoPixelSizeMsg = No es posible realizar la medición. La imagen no está calibrada para mediciones.
 ViewerWnd.Config = Configuración
 ViewerWnd.error.zoom.operation = No es posible continuar realizando zoom.
+ViewerWnd.loading.image = Cargando imagen...
 
 QueryForm.Title = Lista de estudios
 QueryForm.PatientName = Nombre
