--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -160,6 +160,9 @@ words.fullscreen = Full screen
 words.restore.fullscreen = Restore window
 words.images = Images
 words.image.view = Image view
+words.expand = Expand
+words.contract = Contract
+
 
 words.download.report = Download report
 words.start = Start
