--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -160,6 +160,8 @@ words.fullscreen = Ventana completa
 words.restore.fullscreen = Restaurar ventana
 words.images = Imágenes
 words.image.view = Vista de imagen
+words.expand = Expandir
+words.contract = Contraer
 
 words.download.report = Descargar informe
 words.start = Inicio
