navegador de imagenes

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -522,6 +522,11 @@ ViewerWnd.NoPixelSizeMsg = Measurement is not available. The image is not calibr
 ViewerWnd.Config = Configuration
 ViewerWnd.error.zoom.operation = Zoom operation requested can not be completed.
 ViewerWnd.loading.image = Loading image...
+ViewerWnd.first.image.serie = First image (serie)
+ViewerWnd.prior.image.serie = Previous image (serie)
+ViewerWnd.next.image.serie = Next image (serie)
+ViewerWnd.last.image.serie = Last image (serie)
+
 
 QueryForm.Title = Study search
 QueryForm.PatientName = Patient name:
