--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -527,6 +527,10 @@ ViewerWnd.NoPixelSizeMsg = No es posible realizar la medición. La imagen no está
 ViewerWnd.Config = Configuración
 ViewerWnd.error.zoom.operation = No es posible continuar realizando zoom.
 ViewerWnd.loading.image = Cargando imagen...
+ViewerWnd.first.image.serie = Primera imagen (serie)
+ViewerWnd.prior.image.serie = Imagen anterior (serie)
+ViewerWnd.next.image.serie = Próxima imagen (serie)
+ViewerWnd.last.image.serie = Última imagen (serie)
 
 QueryForm.Title = Lista de estudios
 QueryForm.PatientName = Nombre
