Agregando iconos a los reportes por los estados

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -425,6 +425,7 @@ ConfigurationDlg.title		= Configuration
 AdministrationDlg.title		= Administration
 
 ReportsDlg.title			= Reports management
+ReportsDlg.tableReports.headerName.imgEstado = 
 ReportsDlg.tableReports.headerName.fecha = Date
 ReportsDlg.tableReports.headerName.paciente_id = ID
 ReportsDlg.tableReports.headerName.paciente_nombre = Patient
