--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -426,6 +426,7 @@ ConfigurationDlg.title		= Configuración
 AdministrationDlg.title		= Administración
 
 ReportsDlg.title			= Gestión de Informes
+ReportsDlg.tableReports.headerName.imgEstado =
 ReportsDlg.tableReports.headerName.fecha = Fecha
 ReportsDlg.tableReports.headerName.paciente_id = Identificador
 ReportsDlg.tableReports.headerName.paciente_nombre = Paciente
