- modificado el estilo de la notificacion

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -437,7 +437,7 @@ ReportsDlg.tableReports.headerName.informa = Reporter
 ReportsDlg.tableReports.headerName.refiere = Referrer
 ReportsDlg.tableReports.headerName.estado = Status
 ReportsDlg.reports.tabName = Reports
-ReportsDlg.message.reports.attention = Check the reports, please. They require your attention.
+ReportsDlg.message.reports.attention = There are reports which require your attention! Click or Escape to close.
 
 ReportStatisticsTab.chartTitle = Reports per months
 ReportStatisticsTab.chartPieTitle = Reports distribution
