--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -438,7 +438,7 @@ ReportsDlg.tableReports.headerName.informa = Informa
 ReportsDlg.tableReports.headerName.refiere = Refiere
 ReportsDlg.tableReports.headerName.estado = Estado
 ReportsDlg.reports.tabName = Informes
-ReportsDlg.message.reports.attention = Por favor, revise informes que requiren de su atención.
+ReportsDlg.message.reports.attention = Hay informes que requiren de su atención!\n\n\tClick o Escape para cerrar. 
 
 ReportStatisticsTab.chartTitle = Informes por meses
 ReportStatisticsTab.chartPieTitle = Distribución de informes
