--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -438,6 +438,7 @@ ReportsDlg.tableReports.headerName.refiere = Referrer
 ReportsDlg.tableReports.headerName.estado = Status
 ReportsDlg.reports.tabName = Reports
 ReportsDlg.message.reports.attention = Check the reports, please. They require your attention.
+ReportsDlg.confirm.approve = After approve report, it can not be modify. Are you sure?.
 
 ReportStatisticsTab.chartTitle = Reports per months
 ReportStatisticsTab.chartPieTitle = Reports distribution
@@ -528,7 +529,9 @@ ViewerWnd.first.image.serie = First image (serie)
 ViewerWnd.prior.image.serie = Previous image (serie)
 ViewerWnd.next.image.serie = Next image (serie)
 ViewerWnd.last.image.serie = Last image (serie)
-
+ViewerWnd.confirm.study.report.exist = There is a report of selected study. ¿What do want to do?.
+ViewerWnd.open.exists = Open report
+ViewerWnd.request.new = New request
 
 QueryForm.Title = Study search
 QueryForm.PatientName = Patient name:
