--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -439,6 +439,7 @@ ReportsDlg.tableReports.headerName.refiere = Refiere
 ReportsDlg.tableReports.headerName.estado = Estado
 ReportsDlg.reports.tabName = Informes
 ReportsDlg.message.reports.attention = Por favor, revise informes que requiren de su atención.
+ReportsDlg.confirm.approve = Una vez aprobado el informe no se admitirán modificaciones. ¿Está seguro?.
 
 ReportStatisticsTab.chartTitle = Informes por meses
 ReportStatisticsTab.chartPieTitle = Distribución de informes
@@ -533,6 +534,9 @@ ViewerWnd.first.image.serie = Primera imagen (serie)
 ViewerWnd.prior.image.serie = Imagen anterior (serie)
 ViewerWnd.next.image.serie = Próxima imagen (serie)
 ViewerWnd.last.image.serie = Última imagen (serie)
+ViewerWnd.confirm.study.report.exist = Existe un informe para el estudio al cual está solicitando. ¿Que desea hacer?.
+ViewerWnd.open.exists = Abrir existente
+ViewerWnd.request.new = Solicitar nuevo
 
 QueryForm.Title = Lista de estudios
 QueryForm.PatientName = Nombre
