--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -438,7 +438,7 @@ ReportsDlg.tableReports.headerName.refiere = Referrer
 ReportsDlg.tableReports.headerName.estado = Status
 ReportsDlg.reports.tabName = Reports
 ReportsDlg.message.reports.attention = There are reports which require your attention! Click or Escape to close.
-ReportsDlg.confirm.approve = After approve report, it can not be modify. Are you sure?.
+ReportsDlg.confirm.approve = After the report is approved, it can not be modified. Are you sure?.
 
 ReportStatisticsTab.chartTitle = Reports per months
 ReportStatisticsTab.chartPieTitle = Reports distribution
