--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -529,7 +529,7 @@ ViewerWnd.first.image.serie = First image (serie)
 ViewerWnd.prior.image.serie = Previous image (serie)
 ViewerWnd.next.image.serie = Next image (serie)
 ViewerWnd.last.image.serie = Last image (serie)
-ViewerWnd.confirm.study.report.exist = There is a report of selected study. ¿What do want to do?.
+ViewerWnd.confirm.study.report.exist = There is a report of selected study. ¿What do want to do?.\n\n
 ViewerWnd.open.exists = Open report
 ViewerWnd.request.new = New request
 
