--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -534,7 +534,7 @@ ViewerWnd.first.image.serie = Primera imagen (serie)
 ViewerWnd.prior.image.serie = Imagen anterior (serie)
 ViewerWnd.next.image.serie = Próxima imagen (serie)
 ViewerWnd.last.image.serie = Última imagen (serie)
-ViewerWnd.confirm.study.report.exist = Existe un informe para el estudio al cual está solicitando. ¿Que desea hacer?.
+ViewerWnd.confirm.study.report.exist = Existe un informe para este estudio. ¿Que desea hacer?.\n
 ViewerWnd.open.exists = Abrir existente
 ViewerWnd.request.new = Solicitar nuevo
 
