--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -558,6 +558,7 @@ QueryForm.PreviousPage = Previous page
 QueryForm.NextPage = Next page
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No studies were found
+QueryForm.Upload.Report = Upload report
 
 Generic.Ok = Ok
 Generic.Cancel = Cancel
