--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -563,6 +563,7 @@ QueryForm.PreviousPage = Anteriores
 QueryForm.NextPage = Siguientes
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No se encontraron estudios
+QueryForm.Upload.Report = Subir informe
 
 Generic.Ok  = Aceptar
 Generic.Cancel  = Cancelar
