--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -560,6 +560,7 @@ QueryForm.NextPage = Next page
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No studies were found
 QueryForm.Upload.Report = Upload report
+QueryForm.Error.Upload.Report.pdf = Uploaded report is not a pdf file 
 
 Generic.Ok = Ok
 Generic.Cancel = Cancel
