--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -565,6 +565,7 @@ QueryForm.NextPage = Siguientes
 QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
 QueryForm.error = No se encontraron estudios
 QueryForm.Upload.Report = Subir informe
+QueryForm.Error.Upload.Report.pdf = El reporte a subir no es un archivo pdf. 
 
 Generic.Ok  = Aceptar
 Generic.Cancel  = Cancelar
