Agregando tipo de estudio

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -304,6 +304,10 @@ informesPlantillasConfig.tabName = Report templates
 informesPlantillasConfig.table.headerName.id = Id
 informesPlantillasConfig.table.headerName.nombre = Name
 
+tipoEstudioConfig.tabName = Studies types
+tipoEstudioConfig.tableCentrosConfig.headerName.nombre = Name
+tipoEstudioConfig.tableCentrosConfig.headerName.duracion = Duration (min)
+
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Users
 usuariosConfig.tableUsuarioConfig.headerName.id = Id
@@ -412,6 +416,15 @@ modalNewReport.wndCaption.add = New report
 modalNewReport.wndCaption.modify = Modify report
 modalNewReport.wndCaption.delete = Delete report
 modalNewReport.confirm.delete = Confirm to delete report?
+
+#>>>>>>Modal tipo de estudio
+modalNewStudyType.lbNombre = Name
+modalNewStudyType.lbDuracion = Duration (min)
+modalNewStudyType.wndCaption.view = View study type
+modalNewStudyType.wndCaption.add = New study type
+modalNewStudyType.wndCaption.modify = Modify study type
+modalNewStudyType.wndCaption.delete = Delete study type
+modalNewStudyType.confirm.delete = ¿Confirm to delete study type?
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
