--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -303,6 +303,11 @@ informesPlantillasConfig.tabName = Plantillas de informes
 informesPlantillasConfig.table.headerName.id = Id
 informesPlantillasConfig.table.headerName.nombre = Nombre
 
+tipoEstudioConfig.tabName = Tipos de Estudios
+tipoEstudioConfig.tableCentrosConfig.headerName.nombre = Nombre
+tipoEstudioConfig.tableCentrosConfig.headerName.duracion = Duración (min)
+
+
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Usuarios
 usuariosConfig.tableUsuarioConfig.headerName.id = Id
@@ -413,6 +418,16 @@ modalNewReport.wndCaption.add = Nuevo Informe
 modalNewReport.wndCaption.modify = Modificar Informe
 modalNewReport.wndCaption.delete = Eliminar Informe
 modalNewReport.confirm.delete = ¿Confirma eliminar el informe?
+
+#>>>>>>Modal tipo de estudio
+modalNewStudyType.lbNombre = Nombre
+modalNewStudyType.lbDuracion = Duración (min)
+modalNewStudyType.wndCaption.view = Ver Tipo Estudio
+modalNewStudyType.wndCaption.add = Nuevo Tipo Estudio
+modalNewStudyType.wndCaption.modify = Modificar Tipo Estudio
+modalNewStudyType.wndCaption.delete = Eliminar Tipo Estudio
+modalNewStudyType.confirm.delete = ¿Confirma eliminar el tipo de estudio?
+
 
 operacion.anadir 			= Añadir
 operacion.modificar 		= Modificar
