--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -305,8 +305,13 @@ informesPlantillasConfig.table.headerName.id = Id
 informesPlantillasConfig.table.headerName.nombre = Name
 
 tipoEstudioConfig.tabName = Studies types
-tipoEstudioConfig.tableCentrosConfig.headerName.nombre = Name
-tipoEstudioConfig.tableCentrosConfig.headerName.duracion = Duration (min)
+tipoEstudioConfig.table.headerName.nombre = Name
+tipoEstudioConfig.table.headerName.duracion = Duration (min)
+
+equipoConfig.tabName = Devices
+instalacionConfig.table.headerName.nombre = Name
+instalacionConfig.table.headerName.aetitle = AETitle
+instalacionConfig.table.headerName.modalidad = Modality
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Users
@@ -425,6 +430,17 @@ modalNewStudyType.wndCaption.add = New study type
 modalNewStudyType.wndCaption.modify = Modify study type
 modalNewStudyType.wndCaption.delete = Delete study type
 modalNewStudyType.confirm.delete = ¿Confirm to delete study type?
+
+#>>>>>>Modal Instalacion
+modalNewInst.lbNombre = Name
+modalNewInst.lbAEtitle = AETitle
+modalNewInst.lbModalidad = Modality
+#>>>>Equipo
+modalNewEquipo.wndCaption.view = View device
+modalNewEquipo.wndCaption.add = New device
+modalNewEquipo.wndCaption.modify = Modify device
+modalNewEquipo.wndCaption.delete = Delete device
+modalNewEquipo.confirm.delete = ¿Confirm to delete device?
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
