--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -304,9 +304,13 @@ informesPlantillasConfig.table.headerName.id = Id
 informesPlantillasConfig.table.headerName.nombre = Nombre
 
 tipoEstudioConfig.tabName = Tipos de Estudios
-tipoEstudioConfig.tableCentrosConfig.headerName.nombre = Nombre
-tipoEstudioConfig.tableCentrosConfig.headerName.duracion = Duración (min)
+tipoEstudioConfig.table.headerName.nombre = Nombre
+tipoEstudioConfig.table.headerName.duracion = Duración (min)
 
+equipoConfig.tabName = Equipos
+instalacionConfig.table.headerName.nombre = Nombre
+instalacionConfig.table.headerName.aetitle = AETitle
+instalacionConfig.table.headerName.modalidad = Modalidad
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Usuarios
@@ -427,6 +431,17 @@ modalNewStudyType.wndCaption.add = Nuevo Tipo Estudio
 modalNewStudyType.wndCaption.modify = Modificar Tipo Estudio
 modalNewStudyType.wndCaption.delete = Eliminar Tipo Estudio
 modalNewStudyType.confirm.delete = ¿Confirma eliminar el tipo de estudio?
+
+#>>>>>>Modal Instalacion
+modalNewInst.lbNombre = Nombre
+modalNewInst.lbAEtitle = AETitle
+modalNewInst.lbModalidad = Modalidad
+#>>>>Equipo
+modalNewEquipo.wndCaption.view = Ver Equipo
+modalNewEquipo.wndCaption.add = Nuevo Equipo
+modalNewEquipo.wndCaption.modify = Modificar Equipo
+modalNewEquipo.wndCaption.delete = Eliminar Equipo
+modalNewEquipo.confirm.delete = ¿Confirma eliminar el equipo?
 
 
 operacion.anadir 			= Añadir
