Pacientes. Primera aproximación

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -33,6 +33,7 @@ words.report = Reporter
 words.keywords = Keywords
 words.icd10cm = Diagnostic
 words.patient = Patient
+words.patients = Patients
 words.study = Study
 words.patient.id = Patient ID
 words.study.id = Study ID
@@ -164,6 +165,9 @@ words.image.view = Image view
 words.expand = Expand
 words.contract = Contract
 
+words.sex.male = Male
+words.sex.female = Female
+words.sex.other = Other
 
 words.download.report = Download report
 words.start = Start
@@ -441,6 +445,30 @@ modalNewEquipo.wndCaption.add = New device
 modalNewEquipo.wndCaption.modify = Modify device
 modalNewEquipo.wndCaption.delete = Delete device
 modalNewEquipo.confirm.delete = ¿Confirm to delete device?
+
+#>>>>>>Paciente
+pacienteConfig.tabName = Patients
+pacienteConfig.table.headerName.identificador = Id
+pacienteConfig.table.headerName.nombre = Name
+pacienteConfig.table.headerName.sexo = Sex
+pacienteConfig.table.headerName.edad = Age
+pacienteConfig.table.headerName.citas = Citations
+
+modalNewPaciente.lbNombre = Name
+modalNewPaciente.lbApellido1 = Surname
+modalNewPaciente.lbApellido2 = Lastname
+modalNewPaciente.lbSexo = Sex
+modalNewPaciente.lbFNacimiento = Birthdate
+modalNewPaciente.lbIdentificador = Id
+modalNewPaciente.lbEmail = Email
+modalNewPaciente.lbTelefono = Phone number
+modalNewPaciente.lbCelular = Movile number
+modalNewPaciente.Datos.Contacto = Contact information
+modalNewPaciente.wndCaption.view = View Patient
+modalNewPaciente.wndCaption.add = New Patient
+modalNewPaciente.wndCaption.modify = Modify Patient
+modalNewPaciente.wndCaption.delete = Delete Patient
+modalNewPaciente.confirm.delete = ¿Confirm to delete selected patient?
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
