--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -33,6 +33,8 @@ words.report = Informa
 words.keywords = Palabras clave
 words.icd10cm = Diagnóstico
 words.patient = Paciente
+words.patients = Pacientes
+words.patients.view = Vista de pacientes
 words.study = Estudio
 words.patient.id = ID paciente
 words.study.id = ID estudio
@@ -163,6 +165,10 @@ words.images = Imágenes
 words.image.view = Vista de imagen
 words.expand = Expandir
 words.contract = Contraer
+
+words.sex.male = Masculino
+words.sex.female = Femenino
+words.sex.other = Otro
 
 words.download.report = Descargar informe
 words.start = Inicio
@@ -442,6 +448,30 @@ modalNewEquipo.wndCaption.add = Nuevo Equipo
 modalNewEquipo.wndCaption.modify = Modificar Equipo
 modalNewEquipo.wndCaption.delete = Eliminar Equipo
 modalNewEquipo.confirm.delete = ¿Confirma eliminar el equipo?
+
+#>>>>>>Paciente
+pacienteConfig.tabName = Pacientes
+pacienteConfig.table.headerName.identificador = Identificador
+pacienteConfig.table.headerName.nombre = Nombre
+pacienteConfig.table.headerName.sexo = Sexo
+pacienteConfig.table.headerName.edad = Edad
+pacienteConfig.table.headerName.citas = Citas
+
+modalNewPaciente.lbNombre = Nombre
+modalNewPaciente.lbApellido1 = Primer apellido
+modalNewPaciente.lbApellido2 = Segundo apellido
+modalNewPaciente.lbSexo = Sexo
+modalNewPaciente.lbFNacimiento = Fecha de nacimiento
+modalNewPaciente.lbIdentificador = Identificador
+modalNewPaciente.lbEmail = Correo electrónico
+modalNewPaciente.lbTelefono = Teléfono
+modalNewPaciente.lbCelular = Celular
+modalNewPaciente.Datos.Contacto = Datos de contacto
+modalNewPaciente.wndCaption.view = Ver Paciente
+modalNewPaciente.wndCaption.add = Nuevo Paciente
+modalNewPaciente.wndCaption.modify = Modificar Paciente
+modalNewPaciente.wndCaption.delete = Eliminar Paciente
+modalNewPaciente.confirm.delete = ¿Confirma eliminar el paciente seleccionado?
 
 
 operacion.anadir 			= Añadir
