--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -164,6 +164,7 @@ words.images = Images
 words.image.view = Image view
 words.expand = Expand
 words.contract = Contract
+words.citations = Citations
 
 words.sex.male = Male
 words.sex.female = Female
@@ -458,7 +459,7 @@ modalNewPaciente.lbNombre = Name
 modalNewPaciente.lbApellido1 = Surname
 modalNewPaciente.lbApellido2 = Lastname
 modalNewPaciente.lbSexo = Sex
-modalNewPaciente.lbFNacimiento = Birthdate
+modalNewPaciente.lbFNacimiento = Birthdate(dd/mm/yyyy)
 modalNewPaciente.lbIdentificador = Id
 modalNewPaciente.lbEmail = Email
 modalNewPaciente.lbTelefono = Phone number
@@ -469,6 +470,7 @@ modalNewPaciente.wndCaption.add = New Patient
 modalNewPaciente.wndCaption.modify = Modify Patient
 modalNewPaciente.wndCaption.delete = Delete Patient
 modalNewPaciente.confirm.delete = ¿Confirm to delete selected patient?
+modalNewPaciente.error.fnacimiento = Birthdate out of range.
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
