--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -165,6 +165,7 @@ words.images = Imágenes
 words.image.view = Vista de imagen
 words.expand = Expandir
 words.contract = Contraer
+words.citations = Citas
 
 words.sex.male = Masculino
 words.sex.female = Femenino
@@ -461,7 +462,7 @@ modalNewPaciente.lbNombre = Nombre
 modalNewPaciente.lbApellido1 = Primer apellido
 modalNewPaciente.lbApellido2 = Segundo apellido
 modalNewPaciente.lbSexo = Sexo
-modalNewPaciente.lbFNacimiento = Fecha de nacimiento
+modalNewPaciente.lbFNacimiento = F. de nacimiento(dd/mm/aaaa)
 modalNewPaciente.lbIdentificador = Identificador
 modalNewPaciente.lbEmail = Correo electrónico
 modalNewPaciente.lbTelefono = Teléfono
@@ -472,6 +473,8 @@ modalNewPaciente.wndCaption.add = Nuevo Paciente
 modalNewPaciente.wndCaption.modify = Modificar Paciente
 modalNewPaciente.wndCaption.delete = Eliminar Paciente
 modalNewPaciente.confirm.delete = ¿Confirma eliminar el paciente seleccionado?
+modalNewPaciente.error.fnacimiento = Fecha de nacimiento fuera de rango.
+
 
 
 operacion.anadir 			= Añadir
