--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -165,6 +165,11 @@ words.image.view = Image view
 words.expand = Expand
 words.contract = Contract
 words.citations = Citations
+words.view = View
+words.diary = Diary
+words.weekly = Weekly
+words.monthly = Monthly
+
 
 words.sex.male = Male
 words.sex.female = Female
@@ -237,6 +242,9 @@ day.nemonico.4 = Thu
 day.nemonico.5 = Fri
 day.nemonico.6 = Sat
 day.nemonico.7 = Sun
+
+#Tipo de instalación
+facility.type.1 = Devices
 
 #Informes
 error.save.report				= There is an error storing the report
@@ -471,6 +479,22 @@ modalNewPaciente.wndCaption.modify = Modify Patient
 modalNewPaciente.wndCaption.delete = Delete Patient
 modalNewPaciente.confirm.delete = ¿Confirm to delete selected patient?
 modalNewPaciente.error.fnacimiento = Birthdate out of range.
+
+#Citas
+modalCitationDlg.lbPaciente = Patient
+modalCitationDlg.lbInstalacion.equipo = Device
+modalCitationDlg.lbInstalacion.consulta = Consultation
+modalCitationDlg.lbTipo = Study type
+modalCitationDlg.lbReferidor = Referrer
+modalCitationDlg.lbFecha = Date
+modalCitationDlg.lbHoraInicio = Starting time
+modalCitationDlg.lbHoraFin = Ending time
+
+modalCitationDlg.wndCaption.view = Citation
+modalCitationDlg.wndCaption.add = New citation
+modalCitationDlg.wndCaption.modify = Modify citation
+modalCitationDlg.wndCaption.delete = Delete citation
+
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
