--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -166,6 +166,11 @@ words.image.view = Vista de imagen
 words.expand = Expandir
 words.contract = Contraer
 words.citations = Citas
+words.citations.add = Agregar cita
+words.view = Vista
+words.diary = Diario
+words.weekly = Semanal
+words.monthly = Mensual
 
 words.sex.male = Masculino
 words.sex.female = Femenino
@@ -238,6 +243,9 @@ day.nemonico.4 = Jue
 day.nemonico.5 = Vie
 day.nemonico.6 = Sab
 day.nemonico.7 = Dom
+
+#Tipo de instalación
+facility.type.1 = Equipos
 
 #Informes
 error.save.report				= Ha ocurrido un error almacenando el informe.
@@ -475,6 +483,20 @@ modalNewPaciente.wndCaption.delete = Eliminar Paciente
 modalNewPaciente.confirm.delete = ¿Confirma eliminar el paciente seleccionado?
 modalNewPaciente.error.fnacimiento = Fecha de nacimiento fuera de rango.
 
+#Citas
+modalCitationDlg.lbPaciente = Paciente
+modalCitationDlg.lbInstalacion.equipo = Equipo
+modalCitationDlg.lbInstalacion.consulta = Consulta
+modalCitationDlg.lbTipo = Tipo de estudio
+modalCitationDlg.lbReferidor = Referidor
+modalCitationDlg.lbFecha = Fecha
+modalCitationDlg.lbHoraInicio = Hora inicio
+modalCitationDlg.lbHoraFin = Hora fin
+
+modalCitationDlg.wndCaption.view = Cita
+modalCitationDlg.wndCaption.add = Nueva cita
+modalCitationDlg.wndCaption.modify = Modificar cita
+modalCitationDlg.wndCaption.delete = Eliminar cita
 
 
 operacion.anadir 			= Añadir
