Modificando DB y Lazy loading

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -437,6 +437,7 @@ modalNewReport.confirm.delete = Confirm to delete report?
 
 #>>>>>>Modal tipo de estudio
 modalNewStudyType.lbNombre = Name
+modalNewStudyType.lbTipo = Type
 modalNewStudyType.lbDuracion = Duration (min)
 modalNewStudyType.wndCaption.view = View study type
 modalNewStudyType.wndCaption.add = New study type
