--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -440,6 +440,7 @@ modalNewReport.confirm.delete = ¿Confirma eliminar el informe?
 
 #>>>>>>Modal tipo de estudio
 modalNewStudyType.lbNombre = Nombre
+modalNewStudyType.lbTipo = Tipo
 modalNewStudyType.lbDuracion = Duración (min)
 modalNewStudyType.wndCaption.view = Ver Tipo Estudio
 modalNewStudyType.wndCaption.add = Nuevo Tipo Estudio
