Programando citas 1.0Beta

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -496,6 +496,9 @@ modalCitationDlg.wndCaption.add = New citation
 modalCitationDlg.wndCaption.modify = Modify citation
 modalCitationDlg.wndCaption.delete = Delete citation
 
+modalCitationDlg.error.rango.horas = Starting time greater than ending time
+modalCitationDlg.error.today = Starting time before today
+
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
