--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -499,6 +499,9 @@ modalCitationDlg.wndCaption.add = Nueva cita
 modalCitationDlg.wndCaption.modify = Modificar cita
 modalCitationDlg.wndCaption.delete = Eliminar cita
 
+modalCitationDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
+modalCitationDlg.error.today = Fecha de cita no puede ser anterior al día hoy
+
 
 operacion.anadir 			= Añadir
 operacion.modificar 		= Modificar
