Horario en equipos

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -177,6 +177,11 @@ words.sex.other = Other
 
 words.download.report = Download report
 words.start = Start
+words.end = End
+words.break = Break
+words.breaks = Breaks
+words.break.add = Add Break
+words.break.remove = Remove Break
 
 words.copyright = Copyright © 2013 
 words.all.rights = All rights reserved
@@ -449,6 +454,9 @@ modalNewStudyType.confirm.delete = ¿Confirm to delete study type?
 modalNewInst.lbNombre = Name
 modalNewInst.lbAEtitle = AETitle
 modalNewInst.lbModalidad = Modality
+modalNewInst.lbHorario = Working Plan
+modalNewInst.lbTiempoMinimo = Lowest time
+modalNewInst.error.horario = Missing information in working time.
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = View device
 modalNewEquipo.wndCaption.add = New device
