--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -177,7 +177,12 @@ words.sex.female = Femenino
 words.sex.other = Otro
 
 words.download.report = Descargar informe
+words.end = Fin
 words.start = Inicio
+words.break = Receso
+words.breaks = Recesos
+words.break.add = Agregar receso
+words.break.remove = Eliminar receso
 
 words.copyright = Copyright © 2012 
 words.all.rights = Todos los derechos reservados
@@ -452,6 +457,9 @@ modalNewStudyType.confirm.delete = ¿Confirma eliminar el tipo de estudio?
 modalNewInst.lbNombre = Nombre
 modalNewInst.lbAEtitle = AETitle
 modalNewInst.lbModalidad = Modalidad
+modalNewInst.lbHorario = Horario de trabajo
+modalNewInst.lbTiempoMinimo = T. mínimo de consulta (min)
+modalNewInst.error.horario = Existe información erronea relacionada con el horario de trabajo.
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = Ver Equipo
 modalNewEquipo.wndCaption.add = Nuevo Equipo
