--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -163,6 +163,7 @@ words.restore.fullscreen = Restore window
 words.images = Images
 words.image.view = Image view
 words.expand = Expand
+words.facility = Facility
 words.contract = Contract
 words.citations = Citations
 words.view = View
@@ -182,6 +183,8 @@ words.break = Break
 words.breaks = Breaks
 words.break.add = Add Break
 words.break.remove = Remove Break
+words.every.days = Every days
+words.week.days = Week days
 
 words.copyright = Copyright © 2013 
 words.all.rights = All rights reserved
@@ -331,6 +334,10 @@ instalacionConfig.table.headerName.nombre = Name
 instalacionConfig.table.headerName.aetitle = AETitle
 instalacionConfig.table.headerName.modalidad = Modality
 
+tipoHorarioConfig.tabName = Scheduler types
+tipoHorarioConfig.table.headerName.nombre = Name
+tipoHorarioConfig.table.headerName.tipoinstalacion = Facility type
+tipoHorarioConfig.table.headerName.tipohorario = Scheduler type
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Users
 usuariosConfig.tableUsuarioConfig.headerName.id = Id
@@ -489,23 +496,37 @@ modalNewPaciente.wndCaption.delete = Delete Patient
 modalNewPaciente.confirm.delete = ¿Confirm to delete selected patient?
 modalNewPaciente.error.fnacimiento = Birthdate out of range.
 
+#Tipos de horario
+modalNewTipoHorario.lbNombre = Name
+modalNewTipoHorario.tipo = Type
+modalNewTipoHorario.tipo.0 = Every days equals
+modalNewTipoHorario.tipo.1 = From Monday to Friday working plan
+modalNewTipoHorario.tipo.2 = Custom working plan
+modalNewTipoHorario.horario = Working Plan
+modalNewTipoHorario.wndCaption.view = Working Plan type
+modalNewTipoHorario.wndCaption.add = New working plan type
+modalNewTipoHorario.wndCaption.modify = Edit working plan type
+modalNewTipoHorario.wndCaption.delete = Delete working plan type
+modalNewTipoHorario.confirm.delete = ¿Confirm to delete selected working plan type?
+
 #Citas
-modalCitationDlg.lbPaciente = Patient
-modalCitationDlg.lbInstalacion.equipo = Device
-modalCitationDlg.lbInstalacion.consulta = Consultation
-modalCitationDlg.lbTipo = Study type
-modalCitationDlg.lbReferidor = Referrer
-modalCitationDlg.lbFecha = Date
-modalCitationDlg.lbHoraInicio = Starting time
-modalCitationDlg.lbHoraFin = Ending time
+modalAppointmentDlg.lbPaciente = Patient
+modalAppointmentDlg.lbInstalacion.equipo = Device
+modalAppointmentDlg.lbInstalacion.consulta = Consultation
+modalAppointmentDlg.lbTipo = Study type
+modalAppointmentDlg.lbReferidor = Referrer
+modalAppointmentDlg.lbFecha = Date
+modalAppointmentDlg.lbHoraInicio = Starting time
+modalAppointmentDlg.lbHoraFin = Ending time
+modalAppointmentDlg.lbDuracion = Elapse time
 
-modalCitationDlg.wndCaption.view = Citation
-modalCitationDlg.wndCaption.add = New citation
-modalCitationDlg.wndCaption.modify = Modify citation
-modalCitationDlg.wndCaption.delete = Delete citation
+modalAppointmentDlg.wndCaption.view = Citation
+modalAppointmentDlg.wndCaption.add = New citation
+modalAppointmentDlg.wndCaption.modify = Modify citation
+modalAppointmentDlg.wndCaption.delete = Delete citation
 
-modalCitationDlg.error.rango.horas = Starting time greater than ending time
-modalCitationDlg.error.today = Starting time before today
+modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
+modalAppointmentDlg.error.today = Starting time before today
 
 
 operacion.anadir 			= Add
