--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -164,6 +164,7 @@ words.restore.fullscreen = Restaurar ventana
 words.images = Imágenes
 words.image.view = Vista de imagen
 words.expand = Expandir
+words.facility = Instalación
 words.contract = Contraer
 words.citations = Citas
 words.citations.add = Agregar cita
@@ -183,6 +184,8 @@ words.break = Receso
 words.breaks = Recesos
 words.break.add = Agregar receso
 words.break.remove = Eliminar receso
+words.every.days = Todos los días
+words.week.days = De Lunes a Viernes
 
 words.copyright = Copyright © 2012 
 words.all.rights = Todos los derechos reservados
@@ -331,6 +334,11 @@ equipoConfig.tabName = Equipos
 instalacionConfig.table.headerName.nombre = Nombre
 instalacionConfig.table.headerName.aetitle = AETitle
 instalacionConfig.table.headerName.modalidad = Modalidad
+
+tipoHorarioConfig.tabName = Tipos de horarios
+tipoHorarioConfig.table.headerName.nombre = Nombre
+tipoHorarioConfig.table.headerName.tipoinstalacion = Tipo de instalación
+tipoHorarioConfig.table.headerName.tipohorario = Tipo de horario
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Usuarios
@@ -492,23 +500,37 @@ modalNewPaciente.wndCaption.delete = Eliminar Paciente
 modalNewPaciente.confirm.delete = ¿Confirma eliminar el paciente seleccionado?
 modalNewPaciente.error.fnacimiento = Fecha de nacimiento fuera de rango.
 
+#Tipos de horario
+modalNewTipoHorario.lbNombre = Nombre
+modalNewTipoHorario.tipo = Tipo
+modalNewTipoHorario.tipo.0 = Todos los días iguales
+modalNewTipoHorario.tipo.1 = Horario común de Lunes a Viernes
+modalNewTipoHorario.tipo.2 = Horario por días
+modalNewTipoHorario.horario = Horario de trabajo
+modalNewTipoHorario.wndCaption.view = Tipo de horario
+modalNewTipoHorario.wndCaption.add = Nuevo tipo de horario
+modalNewTipoHorario.wndCaption.modify = Modificar tipo de horario
+modalNewTipoHorario.wndCaption.delete = Eliminar tipo de horario
+modalNewTipoHorario.confirm.delete = ¿Confirma eliminar el tipo de horario seleccionado?
+
 #Citas
-modalCitationDlg.lbPaciente = Paciente
-modalCitationDlg.lbInstalacion.equipo = Equipo
-modalCitationDlg.lbInstalacion.consulta = Consulta
-modalCitationDlg.lbTipo = Tipo de estudio
-modalCitationDlg.lbReferidor = Referidor
-modalCitationDlg.lbFecha = Fecha
-modalCitationDlg.lbHoraInicio = Hora inicio
-modalCitationDlg.lbHoraFin = Hora fin
+modalAppointmentDlg.lbPaciente = Paciente
+modalAppointmentDlg.lbInstalacion.equipo = Equipo
+modalAppointmentDlg.lbInstalacion.consulta = Consulta
+modalAppointmentDlg.lbTipo = Tipo de estudio
+modalAppointmentDlg.lbReferidor = Referidor
+modalAppointmentDlg.lbFecha = Fecha
+modalAppointmentDlg.lbHoraInicio = Hora inicio
+modalAppointmentDlg.lbHoraFin = Hora fin
+modalAppointmentDlg.lbDuracion = Duración
 
-modalCitationDlg.wndCaption.view = Cita
-modalCitationDlg.wndCaption.add = Nueva cita
-modalCitationDlg.wndCaption.modify = Modificar cita
-modalCitationDlg.wndCaption.delete = Eliminar cita
+modalAppointmentDlg.wndCaption.view = Cita
+modalAppointmentDlg.wndCaption.add = Nueva cita
+modalAppointmentDlg.wndCaption.modify = Modificar cita
+modalAppointmentDlg.wndCaption.delete = Eliminar cita
 
-modalCitationDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
-modalCitationDlg.error.today = Fecha de cita no puede ser anterior al día hoy
+modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
+modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día hoy
 
 
 operacion.anadir 			= Añadir
