--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -133,6 +133,8 @@ words.fax = Fax
 words.source = Origen
 words.date = Fecha
 words.time = Hora
+words.hours = Horas
+words.minutes = Minutos
 words.value = Valor
 words.priority = Prioridad
 words.sections = Secciones
@@ -454,7 +456,7 @@ modalNewReport.confirm.delete = ¿Confirma eliminar el informe?
 #>>>>>>Modal tipo de estudio
 modalNewStudyType.lbNombre = Nombre
 modalNewStudyType.lbTipo = Tipo
-modalNewStudyType.lbDuracion = Duración (min)
+modalNewStudyType.lbDuracion = Duración
 modalNewStudyType.wndCaption.view = Ver Tipo Estudio
 modalNewStudyType.wndCaption.add = Nuevo Tipo Estudio
 modalNewStudyType.wndCaption.modify = Modificar Tipo Estudio
@@ -528,7 +530,9 @@ modalAppointmentDlg.wndCaption.view = Cita
 modalAppointmentDlg.wndCaption.add = Nueva cita
 modalAppointmentDlg.wndCaption.modify = Modificar cita
 modalAppointmentDlg.wndCaption.delete = Eliminar cita
+modalAppointmentDlg.wndCaption.cancel = Cancelar cita
 
+modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día hoy
 
