--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -132,6 +132,8 @@ words.fax = Fax
 words.source = Source
 words.date = Date
 words.time = Time
+words.hours = Hours
+words.minutes = Minutes
 words.value = Value
 words.priority = Priority
 words.sections = Sections
@@ -450,7 +452,7 @@ modalNewReport.confirm.delete = Confirm to delete report?
 #>>>>>>Modal tipo de estudio
 modalNewStudyType.lbNombre = Name
 modalNewStudyType.lbTipo = Type
-modalNewStudyType.lbDuracion = Duration (min)
+modalNewStudyType.lbDuracion = Elapsed Time
 modalNewStudyType.wndCaption.view = View study type
 modalNewStudyType.wndCaption.add = New study type
 modalNewStudyType.wndCaption.modify = Modify study type
@@ -524,7 +526,9 @@ modalAppointmentDlg.wndCaption.view = Citation
 modalAppointmentDlg.wndCaption.add = New citation
 modalAppointmentDlg.wndCaption.modify = Modify citation
 modalAppointmentDlg.wndCaption.delete = Delete citation
+modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 
+modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
 modalAppointmentDlg.error.today = Starting time before today
 
